add button SHOW

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<title>JS | Git</title>
 </head>
 <body>
+	<div class="box">
+		ПРИВЕТ
+	</div>
+	<button id='btn'>SHOW</button>
 	
 </body>
 </html>
